it's working, doesn't do much though, will think of better functionality later

--- a/views/colors/list.html
+++ b/views/colors/list.html
@@ -1,5 +1,5 @@
-<h1>list page</h1>
+<h1>ooo pretty</h1>
 
-<div ng-repeat="colors">
-  <div style = {{colors.color}}></div>
+<div ng-repeat="colors in theseColors">
+  <h1 style ="color: {{colors.color}}">{{colors.color}}</h1>
 </div>
