added some more functionality, now it previews what something will look like based on the styling you give it.

--- a/views/colors/create.html
+++ b/views/colors/create.html
@@ -1,3 +1,6 @@
-<h1>Create page</h1>
+<h1>Create a color!</h1>
 <input type="text" name="color" ng-model="newColor.color" placeholder="color" value="">
+<input type="text" name="pixels" value="" ng-model="newColor.pixels" placeholder="pixels">
+<input type="text" name="font" ng-model="newColor.font" value="" placeholder="font">
+<textarea name="name" rows="8" cols="40" ng-model="newColor.text"></textarea>
 <button type="button" ng-click="addColor(newColor)" name="button">Add Color</button>
